[package]
name = "chmparse"
version = "0.1.0"
authors = ["Dennis Duda <git@seri.tools>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8" }
snafu = "0.6"
hex-literal = "0.3"
pahs = { version = "0.1.0-alpha.0", features = ["with_snafu"] }

[patch.crates-io]
pahs = { path = "../pahs" }
